Fix overlaping when shrinking call to action

--- a/style.css
+++ b/style.css
@@ -187,13 +187,13 @@ a {
 
 .call-action {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 20px;
     background-color: #443C68;
-    margin: 90px 0;
-    padding: 40px 120px;
-    width: 1000px;
+    margin: 90px 20px;
+    padding: 40px 20px;
+    width: 1200px;
     border-radius: 10px;
     color: #f9faf8;
 }
